feat: refactor and add ComparisionOperator.forDataType()